[project]
name = "verkenning-komberging"
version = "0.1.0"
description = "Verkenning criterium significante economische schade door overlope via de kombergingsvergelijking."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "openturns>=1.26",
    "probabilistic-library>=26.1.1",
]
